--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> FORMATER </title>
+        <title> PRORESCATE </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
     <body>
         <div id="particles-js"></div>
         <div class="title">
-            <h1>FORMATER</h1>
+            <h1>PRORESCATE</h1>
             <p>MÁS INFORMACIÓN SOBRE NUESTROS PLANES DE FORMACIÓN ADAPTADOS</p>
             <div class="nav">
                 <div class="bloque1">
